--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.3",
     "babel-preset-react-app": "^9.0.1",
+    "bootstrap": "^4.5.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "dotenv": "6.2.0",
@@ -29,6 +30,7 @@
     "express-favicon": "^2.0.1",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
+    "holderjs": "^2.9.7",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
@@ -47,8 +49,10 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
+    "react-bootstrap": "^1.2.2",
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
+    "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
