--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
+    "emailjs-com": "^2.4.1",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.1",
     "eslint-loader": "2.2.1",
